fixed footer overflow

--- a/style.css
+++ b/style.css
@@ -306,6 +306,13 @@ section {
         max-height: 60px;
         margin-bottom: 15px;
     }
+    .footer-social{
+        align-items: normal !important;
+        justify-content: left;
+    }
+    .footer-logo-container{
+        justify-content: left;
+    }
 }
 
 .footer-container {
@@ -1103,7 +1110,7 @@ cite {
         right: 0;
         background: var(--neutral-3);
         flex-direction: column;
-        padding: 2rem;
+        padding: 1rem;
         box-shadow: 0 5px 10px rgba(0,0,0,0.1);
     }
     
@@ -1113,7 +1120,7 @@ cite {
         align-items: center;
     }
     .menu-item-text{
-        padding: 0rem 8rem;
+        padding: 0rem 5rem;
     }
     
     .hero-content {
